src/assets/_settings.scss
@use "sass:color";

:root {
  // Font families
  --font-body:
    "Hubot Sans", system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
    "Segoe UI Symbol";
  --font-heading: var(--font-body);
  --font-code: ui-monospace, monospace;

  // Type sizes
  --size--2: clamp(0.7813rem, 0.7469rem + 0.1717vw, 0.88rem);
  --size--1: clamp(0.9375rem, 0.881rem + 0.2826vw, 1.1rem);
  --size-0: clamp(1.125rem, 1.038rem + 0.4348vw, 1.375rem);
  --size-1: clamp(1.35rem, 1.2217rem + 0.6413vw, 1.7188rem);
  --size-2: clamp(1.62rem, 1.4362rem + 0.919vw, 2.1484rem);
  --size-3: clamp(1.944rem, 1.6861rem + 1.2896vw, 2.6855rem);
  --size-4: clamp(2.3328rem, 1.9766rem + 1.7811vw, 3.3569rem);
  --size-5: clamp(2.7994rem, 2.3135rem + 2.4292vw, 4.1962rem);
  --size-6: clamp(3.3592rem, 2.7828rem + 2.5621vw, 4.7684rem);

  // Spacing
  --space-1: clamp(0.3125rem, 0.2908rem + 0.1087vw, 0.375rem);
  --space-2: clamp(0.5625rem, 0.519rem + 0.2174vw, 0.6875rem);
  --space-3: clamp(0.875rem, 0.8098rem + 0.3261vw, 1.0625rem);
  --space-4: clamp(1.125rem, 1.038rem + 0.4348vw, 1.375rem);
  --space-5: clamp(1.6875rem, 1.5571rem + 0.6522vw, 2.0625rem);
  --space-6: clamp(2.25rem, 2.0761rem + 0.8696vw, 2.75rem);
  --space-7: clamp(3.375rem, 3.1141rem + 1.3043vw, 4.125rem);
  --space-8: clamp(4.5rem, 4.1522rem + 1.7391vw, 5.5rem);
  --space-9: clamp(6.75rem, 6.2283rem + 2.6087vw, 8.25rem);

  // One-up spacing
  --space-1-2: clamp(0.3125rem, 0.1821rem + 0.6522vw, 0.6875rem);
  --space-2-3: clamp(0.5625rem, 0.3886rem + 0.8696vw, 1.0625rem);
  --space-3-4: clamp(0.875rem, 0.7011rem + 0.8696vw, 1.375rem);
  --space-4-5: clamp(1.125rem, 0.7989rem + 1.6304vw, 2.0625rem);
  --space-5-6: clamp(1.6875rem, 1.3179rem + 1.8478vw, 2.75rem);
  --space-6-7: clamp(2.25rem, 1.5978rem + 3.2609vw, 4.125rem);
  --space-7-8: clamp(3.375rem, 2.6359rem + 3.6957vw, 5.5rem);
  --space-8-9: clamp(4.5rem, 3.1957rem + 6.5217vw, 8.25rem);

  // Grid system
  --grid-max-width: 80rem;
  --grid-gutter: clamp(1.125rem, 0.6269rem + 2.4904vw, 2.75rem);
  --grid-gutter-half: calc(var(--grid-gutter) / 2);

  // Borders
  --border-hairline: 1px;
  --border-regular: 0.25rem;
  --border-thick: 1rem;

  // Raw colours
  --c-black: #4b4b4b;
  --c-white: #fff;
  --c-neon-green: #00e200;
  --c-muted-green: #588157;
  --c-neon-purple: #7c56fc;
  --c-muted-purple: #786999;

  // Contextual raw colours
  --c-green: light-dark(var(--c-muted-green), var(--c-neon-green));
  --c-purple: light-dark(var(--c-muted-purple), var(--c-neon-purple));

  // Layout colours
  --color-canvas: light-dark(
    color-mix(in hsl, var(--c-purple), #fff 95%),
    color-mix(in hsl, var(--c-purple), #000 75%)
  );
  --color-surface: light-dark(
    var(--c-white),
    color-mix(in hsl, var(--c-purple), #000 65%)
  );
  --color-furniture: var(--c-purple);
  --color-accent: var(--c-green);

  // Text colours
  --color-text: light-dark(var(--c-black), var(--c-white));
  --color-text-accent: light-dark(
    color-mix(in hsl, var(--c-green), #000 10%),
    color-mix(in hsl, var(--c-green), #fff 10%)
  );
  --color-text-subtle: light-dark(
    color-mix(in hsl, var(--color-canvas), var(--color-text) 80%),
    color-mix(in hsl, var(--color-canvas), var(--color-text) 95%)
  );

  --color-link: var(--c-green);
  --color-link-visited: color-mix(
    in hsl,
    var(--color-link) 85%,
    var(--color-canvas)
  );
  --color-link-hover: var(--color-link-visited);

  // Focus styles
  --color-focus-text: #000;
  --color-focus-background: #fc0;
}

@media print {
  :root {
    --c-muted-green: #588157;
    --c-muted-purple: #786999;

    --color-canvas: #fff;
    --color-surface: #eee;

    --color-furniture: var(--c-muted-purple);
    --color-accent: var(--c-muted-green);

    --color-text: #000;
    --color-text-accent: var(--c-muted-green);
    --color-text-subtle: #000;

    --color-link: var(--c-muted-green);
    --color-link-visited: var(--c-muted-green);
    --color-link-hover: var(--c-muted-green);
  }
}

